--- a/app/src/main/res/menu/bottom.xml
+++ b/app/src/main/res/menu/bottom.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item
+    <item
+        android:id="@+id/menu.login"
+        android:title="LOGIN"
+        android:icon="@drawable/baseline_login_24" >
+
+    </item>
+    <item
     android:id="@+id/menu_home"
     android:title="Home"
    android:icon="@drawable/baseline_home_24" >
@@ -9,15 +15,10 @@
 </item>
 
 
-    <item
-        android:id="@+id/login"
-        android:title="LOGIN"
-        android:icon="@drawable/baseline_login_24" >
 
-    </item>
 
     <item
-        android:id="@+id/dashboard"
+        android:id="@+id/menu.dashboard"
         android:title="Dashboard"
         android:icon="@drawable/baseline_dashboard_24" >
 
