--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,14 @@
 
     </FrameLayout>
 
+    <FrameLayout
+        android:id="@+id/signUp_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottom_navigation">
+
+    </FrameLayout>
+
 
 <com.google.android.material.bottomnavigation.BottomNavigationView
     android:layout_width="match_parent"
