--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,16 @@
     android:layout_height="match_parent"
     android:background="@color/green"
     tools:context=".HomeFrag">
+<com.google.android.material.floatingactionbutton.FloatingActionButton
+    android:layout_width="50dp"
+    android:layout_height="50dp"
+    android:id="@+id/btnLogout"
+    android:layout_gravity="bottom|right"
+    android:layout_marginEnd="15dp"
+    android:src="@drawable/logout"
+    android:layout_marginBottom="10dp">
+
+</com.google.android.material.floatingactionbutton.FloatingActionButton>
 
 <LinearLayout
     android:layout_width="match_parent"
