--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -61,10 +61,21 @@
 
         </Button>
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:layout_gravity="bottom"
+            android:text="if you don't have an account click here"
+            android:id="@+id/signUp22">
+
+        </Button>
+
 
 
 
 
 
     </LinearLayout>
+
 </FrameLayout>
