--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/orange"
+    android:background="@drawable/background"
     tools:context=".loginFrag">
 
     <LinearLayout
@@ -16,7 +17,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="50sp"
-            android:text="LogIn"
+            android:text="DEBO FITNESS"
+            android:fontFamily="sans-serif-thin"
+            android:textColor="@color/black"
             android:layout_gravity="center" >
 
 
@@ -24,6 +27,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="50dp">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -38,7 +42,8 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
 
 
             <com.google.android.material.textfield.TextInputEditText
@@ -52,28 +57,37 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="30sp"
+            android:id="@+id/button"
+            android:layout_width="230dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
-            android:text="confirm"
-            android:id="@+id/button">
+            android:text="Log in"
+            android:background="@drawable/shapebutton"
+
+            android:textSize="20sp">
 
         </Button>
+
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="70dp"
+            android:text="  No account?"
+            android:textSize="15sp" />
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="30sp"
-            android:layout_gravity="bottom"
-            android:text="if you don't have an account click here"
-            android:id="@+id/signUp22">
+            android:id="@+id/signUp22"
+            android:layout_width="200dp"
+            android:layout_height="55dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:text="Create Account"
+android:background="@drawable/shapebutton"
+            android:textSize="20sp">
 
         </Button>
-
-
-
-
 
 
     </LinearLayout>
