--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".SignUp">
 
     <LinearLayout
@@ -11,117 +12,132 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_marginTop="50dp"
+            android:fontFamily="sans-serif-light"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="50sp"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
             android:text="SignUp"
-            android:layout_gravity="center" >
+            android:textSize="50sp">
 
 
         </TextView>
+
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
             android:layout_marginTop="50dp">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
                 android:id="@+id/etName"
-                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
                 android:hint="User Name"
-                android:layout_margin="10dp"
-                />
+                android:textSize="20sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="70dp"
+            android:layout_gravity="center">
 
 
             <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
                 android:id="@+id/name"
-                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
                 android:hint="Name"
-                android:layout_margin="10dp"
-                />
+                android:textSize="20sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="70dp"
+            android:layout_gravity="center">
 
 
             <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
                 android:id="@+id/phone"
-                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
                 android:hint="Phone"
-                android:layout_margin="10dp"
-                />
+                android:textSize="20sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="70dp"
+            android:layout_gravity="center">
 
 
             <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
                 android:id="@+id/email"
-                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
                 android:hint="Email"
-                android:layout_margin="10dp"
-                />
+                android:textSize="20sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="70dp"
+            android:layout_gravity="center">
 
 
             <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
                 android:id="@+id/password"
-                android:textSize="20sp"
-                android:hint="Password"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_margin="10dp"
-                />
+                android:hint="Password"
+                android:textSize="20sp" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="70dp"
+            android:layout_gravity="center">
 
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/conpassword"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/conpassword"
-                android:textSize="20sp"
-                android:hint="Confirm Password"
                 android:layout_margin="10dp"
-                />
+                android:hint="Confirm Password"
+                android:textSize="20sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="30sp"
+            android:id="@+id/button"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
             android:layout_gravity="center"
-            android:text="SignUp"
-            android:id="@+id/button">
+            android:layout_marginTop="20dp"
+            android:fontFamily="sans-serif-condensed"
+            android:background="@drawable/shapebutton"
+            android:text="Create Account"
+            android:textSize="25sp">
 
         </Button>
 
+        <Button
+            android:id="@+id/clear"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_gravity="right"
+            android:layout_marginTop="80dp"
+            android:fontFamily="sans-serif-condensed"
+            android:background="@drawable/shapebutton"
+            android:text="Clear"
+            android:textSize="25sp">
 
-
-
+        </Button>
 
 
     </LinearLayout>
