--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="orange">#FA812F</color>
     <color name="red">#F44336</color>
    <color name="green">#4CAF50</color>
+    <color name="skyblue">#87CEEB</color>
+    <color name="blue">#0000FF</color>
 </resources>
